--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -110,7 +110,7 @@
 
 
 %\setbeamertemplate{footline}[text line]{\bf \insertshortauthor \hfill \insertshorttitle \hfill \insertframenumber/29}
-\setbeamertemplate{footline}[text line]{\hfill \insertframenumber/ 35}
+\setbeamertemplate{footline}{\hspace*{0.95\textwidth}\vspace{0.1cm} \insertframenumber/\inserttotalframenumber\null}
 
 \AtBeginSection[]
 {
@@ -125,9 +125,9 @@
 \begin{document}
 
 
-% \begin{frame}
-% \titlepage\
-% \end{frame}
+\begin{frame}
+\titlepage\
+\end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -240,7 +240,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Objetivo}
-	\begin{block}{\ldots atacar problemáticas de América Latina relacionadas con el Chagas}
+	\begin{block}{\ldots atacar problemáticas de América Latina relaciónadas con el Chagas}
 
 	% The purpose of this work is to support ongoing national health campaigns
 	% by analyzing mobility information contained in Call Detail Records.
@@ -262,7 +262,7 @@
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Clasificacion Binaria Supervisada}
+\section{Clasificación Binaria Supervisada}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Objetivo Principal}
@@ -293,7 +293,7 @@
 
 \begin{frame}{Consideraciones}
 
-	$f_\theta^*$ intenta aproximar la relacion desconocida entre $\textbf{X}$ y $\textbf{Y}$
+	$f_\theta^*$ intenta aproximar la relación desconocida entre $\textbf{X}$ y $\textbf{Y}$
 
 	\bigskip
 
@@ -336,7 +336,7 @@ Varios tipos de errores a minimizar en el aprendizaje con \textbf{finitos} datos
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{ Ajust Poly-M vs Ajuste Poly-2 }
+\begin{frame}{ Ajuste Poly-M vs Ajuste Poly-2 }
 \center
 \includegraphics[width=0.9\textheight]{slides/wiki_overfit_complex_classifier_demo.png}
 \end{frame}
@@ -364,7 +364,7 @@ Bajo ciertas condiciones sobre $\Theta$ tenemos
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Regresión Logística}
+\begin{frame}[shrink=5]{Regresión Logística}
 % = \frac{P(x|C_1)p(C_1) }{P(x|C_1)p(C_1) + P(x|C_0)p(C_0)}
 Con $\sigma(z) = \frac{1}{1 + e^{-z}}$ y $logodds(x)$ como $\log \left(  \frac{ P(C_1 \mid x)}{P(C_0 \mid x ) } \right)$
 	\begin{block}{Idea}
@@ -391,14 +391,14 @@ Con $\sigma(z) = \frac{1}{1 + e^{-z}}$ y $logodds(x)$ como $\log \left(  \frac{ 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Árbol de decisión}
+\begin{frame}[shrink=2]{Árbol de decisión}
 
-Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mathcal{T}_{iz}(d,j) = \{x \in \mathcal{T} \ / \ x^j \leq d \}$ y $\mathcal{T}_{de}(d,j)$
+Algoritmo recursivo y aleatorio que particióna el espacio en forma binaria $\mathcal{T}_{iz}(d,j) = \{x \in \mathcal{T} \ / \ x^j \leq d \}$ y $\mathcal{T}_{de}(d,j)$
 
 	\begin{block}{Idea}
 		% $$$		
 		\begin{align*}
-			\min_{d, j} \big[ \min_{c_{iz} }  \frac{1}{N_{iz}}\sum_{x \in \mathcal{T}_{iz}(d,j) } Imp(y,c_{iz}) \ 
+			\min_{d, j} \big[ \min_{c_{iz} }  \frac{1}{N_{iz}}\sum_{x \in \mathcal{T}_{iz}(d,j) } Imp(y,c_{iz}) \
 			+  \min_{c_{de}}  \frac{1}{N_{de}}\sum_{x \in \mathcal{T}_{de}(d,j) } Imp(y,c_{de}) \big]
 		\end{align*}
 			donde $Imp$ es una función de \textit{impureza} 
@@ -425,13 +425,14 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Árbol de ejemplo}
-		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
-										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decision_tree/full_tree_map.png}
+		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight,
+										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decisión_tree/full_tree_map.png}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Sobreajuste}
+\center\
 \includegraphics[width=1\textheight]{figure-biasVariance/dtree_overfit_problem_2.png}
 \end{frame}
 
@@ -479,16 +480,16 @@ Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mat
 
 \begin{frame}{``Naive Bayes''}
 
-Suponemos una distribucion conocida para $p(\cdot)$
+Suponemos una distribución conocida para $p(\cdot)$
 	\begin{block}{Idea}
 		Asumir \textit{inocentemente}
 		$$p(X^j |X^1,\ldots,\overline{X^j},\ldots,X^p, C_k) \ = \ p(X^j | C_k) \ \forall k \in \{0,1\}$$
 	\end{block}
 
-	\begin{block}{Función de decision }
+	\begin{block}{Función de decisión }
 
 		\begin{align*}
-			p(C_1) \propto f(X) = \hat{p}(C_{1}) \  \prod_{i=1}^{n} \hat{p}(X_{i}\mid C_{1}) 
+			p(C_1) \propto f(X) = \hat{p}(C_{1}) \  \prod_{i=1}^{n} \hat{p}(X_{i}\mid C_{1})
 		\end{align*}
 
 		\begin{align*}
@@ -501,7 +502,7 @@ Suponemos una distribucion conocida para $p(\cdot)$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Comparacion de Fronteras de Decision}
+\begin{frame}{estimación de Fronteras de Decision}
 		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
 										trim = 0.2 0.2 0.2 0.2cm, left, clip = true]{slides/plot_classifier_comparison.png}
 \end{frame}
@@ -510,14 +511,14 @@ Suponemos una distribucion conocida para $p(\cdot)$
 
 \begin{frame}{$K$ - Validación cruzada}
 
-Optimizacion de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion del $EPE$
+Optimización de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion del $EPE$
 
 	\begin{block}{Idea}
-		Dado un $\alpha \in \mathcal{A}$, particionar las muestras en $K$ conjuntos al azar
+		Dado un $\alpha \in \mathcal{A}$, particiónar las muestras en $K$ conjuntos al azar
 		\\
 		Entrenar $\hat{f}_{\alpha}^{-k}, \ k \in \{1, \ldots, K\}$
 		\\
-		donde cada clasificador $\hat{f}^{-k}$ aprende sin usar las muestras de la particion $k$
+		donde cada clasificador $\hat{f}^{-k}$ aprende sin usar las muestras de la partición $k$
 		\\
 		Computar $CV(\alpha) = \frac{1}{n} \sum^n_{i=1} L\left( y_i, \hat{f}_{\alpha}^{-k_i}(x_i) \right)$
 	\end{block}
@@ -525,14 +526,14 @@ Optimizacion de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Metricas de clasificadores binarios}
+\begin{frame}{Métricas de clasificadores binarios}
 
 	\center
 	Conteo de las combinaciones de $\hat{Y}$ y $Y$
 
 		\begin{columns}
 			\begin{column}{0.55 \textwidth}
-			\small
+			\scriptsize
 				\noindent
 				\renewcommand\arraystretch{1}
 				\setlength\tabcolsep{0pt}
@@ -548,12 +549,12 @@ Optimizacion de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion
 			\end{column}
 
 			\begin{column}{0.45 \textwidth}
-			\small
+			\scriptsize
 				\begin{align*}
 					\begin{split}
 						& Accuracy \ =\ \frac{ TP + TN }{ TP + TN + FP + FN }\\
 						& Precision \ =\ \frac{ TP }{TP + FN}\\
-						 & Recall \  =\ \frac{TP }{TP + FP}\\
+						& Recall \  =\ \frac{TP }{TP + FP}\\
 					  	& F1 = \mbox{media armónica de} Precision \mbox{y} Recall \\
 					  	& Curva \ ROC: \\
 					  	& \sigma(\pi) = (Recall(\pi), FPR(\pi)) \ t.q. \ \pi \in (0,1)
@@ -571,22 +572,9 @@ Optimizacion de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion
 \section{ Descripción de los datos}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Visualización Social: El grafo de comuniaciones}
-
-	% \begin{columns}
-	% 	\begin{column}{0.3\textwidth}
-	% 		Los conjuntos de datos consisten de registros detallados de llamados (CDRs) para Mexico y Argentina provistos por una compañía de telecomunicaciones (TelCo) de cada país. El primero tiene 24 meses de datos mientras que el segundo es de 5 meses.
-	% 	\end{column}
-
-	% 	\begin{column}{0.7\textwidth}
-	% 		\center\
-	% 		\includegraphics[width = 1.0 \textwidth, trim = 0 0 0 0cm, clip = true]{slides/Graph-screenshot.jpg}
-	% 	\end{column}
-	% \end{columns}
-
+\begin{frame}{Visualización Social: El grafo de comunicaciones}
 		\center\
-		\includegraphics[width = 1.0 \textwidth, trim = 0 0 0 0cm, clip = true]{slides/Graph-screenshot.jpg}
-
+		\includegraphics[scale=0.24]{slides/Graph-screenshot.jpg}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -596,7 +584,7 @@ Los conjuntos de datos consisten de registros detallados de llamados (CDRs) para
 
 \medskip
 
-En total, cada dataset tiene mas de 10 mil millones de registros realizados por 8 millones y 2 millones de usuarios, respectivamente para Argentina y México\footnote{No tenemso ninguna información personal de los usuarios como nombre, dirección, teléfono y su privacidad está asegurada mediante criptografía.}
+En total, cada dataset tiene mas de 10 mil millones de registros realizados por 8 millones y 2 millones de usuarios, respectivamente para Argentina y México\footnote{No tenemos ninguna información personal de los usuarios como nombre, dirección, teléfono y su privacidad está asegurada mediante criptografía.}
 
 \medskip
 Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
@@ -612,16 +600,16 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 	\begin{itemize}
 		\item Usuarios anonimizados $u$ y $w$ en esa llamada
 		\item Tiempo de inicio y duración de la llamada $t$
-		\item Direccion $d$ de la llamada (entrante o saliente, con respecto a $u$)
+		\item Dirección $d$ de la llamada (entrante o saliente, con respecto a $u$)
 		\item $a$ es el ID de la antena telefónica usada por $u$ en esa comunicación
 	\end{itemize}
 
 	\medskip
-	$\forall u \  \exists \  H_u$ el lugar de residencia de un usuario que es determinado como la antena $a$ más utilizada de lunes a viernes y fuera del horario laboral. La endemicidiad de un usuario está determinado por la condición $H_u \in E_Z$
+	$\forall u \  \exists \  H_u$ el lugar de residencia de un usuario que es determinado como la antena $a$ más utilizada de lunes a viernes y fuera del horario laboral. La endemicidad de un usuario está determinado por la condición $H_u \in E_Z$
 
 	\medskip
 
-	El conjunto de antenas puede ser particionado a partir de su pertenencia a la zona endémica $A \ = E_Z \cup {E_Z}^{\complement} $
+	El conjunto de antenas puede ser particiónado a partir de su pertenencia a la zona endémica $A \ = E_Z \cup {E_Z}^{\complement} $
 
 \end{frame}
 
@@ -739,7 +727,7 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 			\item Tierra del Fuego
 			\item Este de Río Negro
 			\item Buenos Aires
-			\item Capital Federal, South and North CABA, and AMBA
+			\item Capital Federal, Sur y Norte de CABA y AMBA
 			\item Córdoba Central
 		\end{itemize}
 \end{frame}
@@ -775,7 +763,7 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Comunidades resaltadas}
-	Luego de filtrar los mapas y explorar con distintas visualizaciones, encontramos antentas especificas que se resaltan por su nivel de vulnerabilidad
+	Luego de filtrar los mapas y explorar con distintas visualizaciones, encontramos antenas especificas que se resaltan por su nivel de vulnerabilidad
 	%Como resultado del filtrado en cada zona, nos hemos quedado con las antenas destacadas por su nivel de riesgo y, utilizando su ubicaci\'on, las emparejamos con localidades o comunidades argentinas.
 
 	\bigskip
@@ -796,7 +784,7 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Definición de problemas de migracion A}
+\begin{frame}{Definición de problemas de migración A}
 
 	Sean $EU_{1}$ y $EU_{0}$ los conjuntos de usuarios que vivieron en la región endémica durante $T_1$ y $T_0$ respectivamente
 	% así como también $H^0_u$ y $H^1_u$ para referirnos al hogar de $u$ a través de los períodos
@@ -827,7 +815,7 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Definición de problemas de migracion B}
+\begin{frame}{Definición de problemas de migración B}
 	\begin{block}{Problemas 3}
 
 		Predecir aquellos usuarios que migraron entre regiones, en cualquier dirección
@@ -910,7 +898,7 @@ Un ejemplo de dos atributos de $X$ procesdos a partir del grafo de comunicacione
 				%{l r r r r r r }
 				% \toprule
 				\hline
-				\textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Direccion} &
+				\textbf{Nombre del atributo} & \textbf{Q\_llamados / Tiempo} & \textbf{Momento} & \textbf{Dirección} &
 				\textbf{Vulnerabilidad} & \textbf{Mes} \\
 				% \midrule
 				\hline
@@ -1103,7 +1091,7 @@ Heuristica para algoritmos de ensamble
 	Salvo el clasificador de ``Naive Bayes'', la performance fue muy baja para la metrica $F1$ en el problema 2
 
 	\medskip
-	Los tres tipos de atributos más relevantes para la clasificaición de los migrantes estaban relacionadas con:
+	Los tres tipos de atributos más relevantes para la clasificaición de los migrantes estaban relaciónadas con:
 
 	\begin{enumerate*}[label={\alph*)},]
 		\item la mobilidad del usuario
@@ -1147,7 +1135,7 @@ Heuristica para algoritmos de ensamble
 % 	\begin{block}{Nuevas fuentes de datos}
 % 		Agreagar informacion para mayores analisis:
 % 		\begin{itemize}
-% 			\item Comparacion de resultados de movilidad con serologia por region
+% 			\item estimación de resultados de movilidad con serologia por region
 % 			\item Categorizacion de antenas por grado de ruralidad del ambiente
 % 			\item infected newborns
 % 			\item acute Chagas cases.
